[package]
name = "tesla-metrics"
version = "0.1.0"
authors = ["W. Luke bunselmeyer <luke@bunselmeyer.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
ureq = { version = "2.0.0", features = ["json", "charset"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
prometheus = { version = "0.11.0" }
prometheus-static-metric = "0.5.0"
rocket_prometheus = "0.7.0"
clokwerk = "0.3.4"
once_cell = "1.5.2"
anyhow = "1.0.37"
thiserror = "1.0.23"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.11"
log4rs = "1.0.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
